fixing map sizing issues, wrapped iframe in div

--- a/style.css
+++ b/style.css
@@ -11,11 +11,14 @@ p {
     color: lightgray;
 }
 
-.p_below_h1 {
+.p-below-h1 {
     text-align: center;
 }
-.points_map {
+.map-container {
     width: 80%;
-    height: 720;
-    border: none;
+    text-align: center;
+}
+.map-container iframe {
+    margin: 0 auto;
+    display: block;
 }
